--- a/pom.xml
+++ b/pom.xml
@@ -5,15 +5,26 @@
   <version>0.0.1-SNAPSHOT</version>
   <build>
     <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
+	<plugins>
+	
+	
+	
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>3.4</version>
+	</plugin>
+	
+	
+	
+	
+	
+	
+
+	
+	
+	</plugins>
+    
   </build>
+
 </project>
